--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -2,6 +2,44 @@
     font-size: 2em;
     margin-right: 1em;
 }
+
 .auth-icon{
     margin-right: .5em;
+}
+/* Основной класс таблицы */
+.material-table {
+    font-family: 'Roboto', Arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+    background-color: white;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Заголовки столбцов */
+.material-table th {
+    background-color: #3f51b5;
+    color: white;
+    font-weight: bold;
+    padding: 12px;
+    text-align: left;
+}
+
+/* Строки таблицы */
+.material-table td {
+    padding: 8px;
+    border-bottom: 1px solid #e0e0e0;
+}
+
+/* Чередование цветов строк (необязательно) */
+.material-table tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+.material-table tr:nth-child(odd) {
+    background-color: #ffffff;
+}
+
+/* При наведении курсора на строку */
+.material-table tr:hover {
+    background-color: #c5cae9;
 }
